events: add events implementation
